User Service Save

--- a/MicroService/SocialMediaProject/dependencies.gradle
+++ b/MicroService/SocialMediaProject/dependencies.gradle
@@ -17,6 +17,7 @@ ext {
             mapstruct           : "org.mapstruct:mapstruct:$versions.mapstruct",
             mapstructProcessor  : "org.mapstruct:mapstruct-processor:$versions.mapstruct",
             openapi             : "org.springdoc:springdoc-openapi-ui:$versions.openapi",
+            mongoDB             : "org.springframework.boot:spring-boot-starter-data-mongodb:${versions.springBoot}"
 
 
     ]
