--- a/MicroService/SocialMediaProject/user-service/src/main/resources/application.yml
+++ b/MicroService/SocialMediaProject/user-service/src/main/resources/application.yml
@@ -1,2 +1,11 @@
 server:
-  port: 7071
+  port: 8080
+
+spring:
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: java8SocialMedia
+      username: admin
+      password: root
