--- a/MicroService/SocialMediaProject/build.gradle
+++ b/MicroService/SocialMediaProject/build.gradle
@@ -45,6 +45,7 @@ allprojects {
         annotationProcessor libs.mapstructProcessor
         implementation libs.springBootValidation
         implementation libs.openapi
+        implementation libs.springOpenFeign
     }
 }
 
