--- a/MicroService/SocialMediaProject/build.gradle
+++ b/MicroService/SocialMediaProject/build.gradle
@@ -46,6 +46,8 @@ allprojects {
         implementation libs.springBootValidation
         implementation libs.openapi
         implementation libs.springOpenFeign
+        implementation libs.springCloudSleuthZipkin
+        implementation libs.springCloudSleuth
     }
 }
 
