--- a/MicroService/SocialMediaProject/userprofile-service/build.gradle
+++ b/MicroService/SocialMediaProject/userprofile-service/build.gradle
@@ -6,4 +6,6 @@ buildscript {
 
 dependencies {
     implementation libs.mongoDB
+    implementation libs.springCloudConfigClient
+    implementation libs.springCloudConfig
 }
