--- a/MicroService/SocialMediaProject/auth-service/build.gradle
+++ b/MicroService/SocialMediaProject/auth-service/build.gradle
@@ -7,6 +7,8 @@ buildscript {
 dependencies {
     implementation libs.postgresql
     implementation libs.springBootJpa
+    implementation libs.springCloudConfigClient
+    implementation libs.springCloudConfig
 
 
 }
