--- a/MicroService/SocialMediaProject/auth-service/build.gradle
+++ b/MicroService/SocialMediaProject/auth-service/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     implementation libs.springBootJpa
     implementation libs.springCloudConfigClient
     implementation libs.springCloudConfig
+    implementation libs.springBootRabbitMQ
 
 
 }
