--- a/MicroService/SocialMediaProject/config-server/src/main/resources/config-repo/userprofile-service-application.yml
+++ b/MicroService/SocialMediaProject/config-server/src/main/resources/config-repo/userprofile-service-application.yml
@@ -14,3 +14,8 @@ spring:
       database: java8SocialMedia
       username: admin
       password: root
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: admin
+    password: root
