--- a/MicroService/SocialMediaProject/userprofile-service/build.gradle
+++ b/MicroService/SocialMediaProject/userprofile-service/build.gradle
@@ -8,4 +8,5 @@ dependencies {
     implementation libs.mongoDB
     implementation libs.springCloudConfigClient
     implementation libs.springCloudConfig
+    implementation libs.springBootRabbitMQ
 }
