--- a/MicroService/SocialMediaProject/config-server/src/main/resources/config-repo/auth-service-application.yml
+++ b/MicroService/SocialMediaProject/config-server/src/main/resources/config-repo/auth-service-application.yml
@@ -16,3 +16,8 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: admin
+    password: root
