--- a/MicroService/SocialMediaProject/dependencies.gradle
+++ b/MicroService/SocialMediaProject/dependencies.gradle
@@ -25,6 +25,7 @@ ext {
             springCloudConfig      : "org.springframework.cloud:spring-cloud-starter-config:${versions.springCloud}",
             springCloudSleuthZipkin: "org.springframework.cloud:spring-cloud-sleuth-zipkin:$versions.springCloud",
             springCloudSleuth      : "org.springframework.cloud:spring-cloud-starter-sleuth:$versions.springCloud",
+            springBootRabbitMQ     : "org.springframework.boot:spring-boot-starter-amqp:$versions.springBoot",
 
     ]
 }
