ForgotPass Send Mail

--- a/MicroService/SocialMediaProject/mail-server/build.gradle
+++ b/MicroService/SocialMediaProject/mail-server/build.gradle
@@ -1,19 +1,10 @@
-plugins {
-    id 'java'
-}
-
-group = 'com.sosyalmedya'
-version = 'unspecified'
-
-repositories {
-    mavenCentral()
+buildscript {
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:$versions.springBoot")
+    }
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-}
-
-test {
-    useJUnitPlatform()
+    implementation libs.springBootMailSender
+    implementation libs.springBootRabbitMQ
 }
