--- a/MicroService/SocialMediaProject/dependencies.gradle
+++ b/MicroService/SocialMediaProject/dependencies.gradle
@@ -26,6 +26,7 @@ ext {
             springCloudSleuthZipkin: "org.springframework.cloud:spring-cloud-sleuth-zipkin:$versions.springCloud",
             springCloudSleuth      : "org.springframework.cloud:spring-cloud-starter-sleuth:$versions.springCloud",
             springBootRabbitMQ     : "org.springframework.boot:spring-boot-starter-amqp:$versions.springBoot",
-
+            //Java Mail Sendler
+            springBootMailSender   : "org.springframework.boot:spring-boot-starter-mail:$versions.springBoot",
     ]
 }
