--- a/MicroService/SocialMediaProject/mail-server/build.gradle
+++ b/MicroService/SocialMediaProject/mail-server/build.gradle
@@ -7,4 +7,5 @@ buildscript {
 dependencies {
     implementation libs.springBootMailSender
     implementation libs.springBootRabbitMQ
+    implementation libs.springCloudConfig
 }
