--- a/MicroService/SocialMediaProject/auth-service/build.gradle
+++ b/MicroService/SocialMediaProject/auth-service/build.gradle
@@ -10,6 +10,8 @@ dependencies {
     implementation libs.springCloudConfigClient
     implementation libs.springCloudConfig
     implementation libs.springBootRabbitMQ
+    implementation libs.javaJWT
+  //  implementation libs.springBootSecurity
 
 
 }
