--- a/MicroService/SocialMediaProject/auth-service/src/main/resources/application.yml
+++ b/MicroService/SocialMediaProject/auth-service/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 spring:
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: ${CONFIG-SERVER-URL}
   config:
     import: "configserver:"
   application:
     name: auth-service-application
+
