--- a/MicroService/SocialMediaProject/config-server/src/main/resources/config-repo/auth-service-application.yml
+++ b/MicroService/SocialMediaProject/config-server/src/main/resources/config-repo/auth-service-application.yml
@@ -21,3 +21,6 @@ spring:
     port: 5672
     username: admin
     password: root
+
+localhost:
+  user-manager-url: http://localhost:8080/api/v1/user-profile
