--- a/MicroService/SocialMediaProject/dependencies.gradle
+++ b/MicroService/SocialMediaProject/dependencies.gradle
@@ -1,32 +1,42 @@
 ext {
     versions = [
-            springBoot : "2.7.9",
-            postgresql : "42.6.0",
-            lombok     : "1.18.26",
-            mapstruct  : "1.5.5.Final",
-            openapi    : "1.6.14",
-            springCloud: "3.1.5"
+            springBoot    : "2.7.9",
+            postgresql    : "42.6.0",
+            lombok        : "1.18.26",
+            mapstruct     : "1.5.5.Final",
+            openapi       : "1.6.14",
+            springCloud   : "3.1.5",
+            circuitBreaker: "2.1.6",
+            jwt           : "4.3.0"
 
     ]
     //Ctrl + Alt + L
     libs = [
-            springBootWeb          : "org.springframework.boot:spring-boot-starter-web:$versions.springBoot",
-            springBootJpa          : "org.springframework.boot:spring-boot-starter-data-jpa:$versions.springBoot",
-            springBootValidation   : "org.springframework.boot:spring-boot-starter-validation:$versions.springBoot",
-            postgresql             : "org.postgresql:postgresql:$versions.postgresql",
-            lombok                 : "org.projectlombok:lombok:$versions.lombok",
-            mapstruct              : "org.mapstruct:mapstruct:$versions.mapstruct",
-            mapstructProcessor     : "org.mapstruct:mapstruct-processor:$versions.mapstruct",
-            openapi                : "org.springdoc:springdoc-openapi-ui:$versions.openapi",
-            mongoDB                : "org.springframework.boot:spring-boot-starter-data-mongodb:${versions.springBoot}",
-            springOpenFeign        : "org.springframework.cloud:spring-cloud-starter-openfeign:${versions.springCloud}",
-            springCloudConfigServer: "org.springframework.cloud:spring-cloud-config-server:${versions.springCloud}",
-            springCloudConfigClient: "org.springframework.cloud:spring-cloud-config-client:${versions.springCloud}",
-            springCloudConfig      : "org.springframework.cloud:spring-cloud-starter-config:${versions.springCloud}",
-            springCloudSleuthZipkin: "org.springframework.cloud:spring-cloud-sleuth-zipkin:$versions.springCloud",
-            springCloudSleuth      : "org.springframework.cloud:spring-cloud-starter-sleuth:$versions.springCloud",
-            springBootRabbitMQ     : "org.springframework.boot:spring-boot-starter-amqp:$versions.springBoot",
+            springBootWeb               : "org.springframework.boot:spring-boot-starter-web:$versions.springBoot",
+            springBootJpa               : "org.springframework.boot:spring-boot-starter-data-jpa:$versions.springBoot",
+            springBootValidation        : "org.springframework.boot:spring-boot-starter-validation:$versions.springBoot",
+            postgresql                  : "org.postgresql:postgresql:$versions.postgresql",
+            lombok                      : "org.projectlombok:lombok:$versions.lombok",
+            mapstruct                   : "org.mapstruct:mapstruct:$versions.mapstruct",
+            mapstructProcessor          : "org.mapstruct:mapstruct-processor:$versions.mapstruct",
+            openapi                     : "org.springdoc:springdoc-openapi-ui:$versions.openapi",
+            mongoDB                     : "org.springframework.boot:spring-boot-starter-data-mongodb:${versions.springBoot}",
+            springOpenFeign             : "org.springframework.cloud:spring-cloud-starter-openfeign:${versions.springCloud}",
+            springCloudConfigServer     : "org.springframework.cloud:spring-cloud-config-server:${versions.springCloud}",
+            springCloudConfigClient     : "org.springframework.cloud:spring-cloud-config-client:${versions.springCloud}",
+            springCloudConfig           : "org.springframework.cloud:spring-cloud-starter-config:${versions.springCloud}",
+            springCloudSleuthZipkin     : "org.springframework.cloud:spring-cloud-sleuth-zipkin:$versions.springCloud",
+            springCloudSleuth           : "org.springframework.cloud:spring-cloud-starter-sleuth:$versions.springCloud",
+            springBootRabbitMQ          : "org.springframework.boot:spring-boot-starter-amqp:$versions.springBoot",
             //Java Mail Sendler
-            springBootMailSender   : "org.springframework.boot:spring-boot-starter-mail:$versions.springBoot",
+            springBootMailSender        : "org.springframework.boot:spring-boot-starter-mail:$versions.springBoot",
+            //ApiGateway
+            springCloudStarterApiGateway: "org.springframework.cloud:spring-cloud-starter-gateway:$versions.springCloud",
+            springCloudCircuitBreaker   : "org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j:$versions.circuitBreaker",
+            springCloudCircuitReactor   : "org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j:$versions.circuitBreaker",
+            //Security
+            springBootSecurity          : "org.springframework.boot:spring-boot-starter-security:$versions.springBoot",
+            javaJWT                     : "com.auth0:java-jwt:$versions.jwt",
+
     ]
 }
